--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="image-container"></div>
         <div id="text-container"></div>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
     <script src="script.js"></script>
 </body>
 </html>
