--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Repository Website</title>
-    <link href="https://fonts.googleapis.com/css2?family=TeX+Gyre+Termes&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Noosphere</title>
 </head>
 <body>
-    <header>
-        <h1 id="title"></h1>
-    </header>
-    <main>
-        <div id="image-container"></div>
-        <div id="text-container"></div>
-    </main>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
-    <script src="script.js"></script>
+  <h1>Noosphere</h1>
+  <div id="submodules"></div>
+  <script src="script.js"></script>
 </body>
 </html>
