--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Noosphere</title>
+  <title>Canvas Viewer</title>
 </head>
 <body>
-  <h1>Noosphere</h1>
-  <div id="submodules"></div>
-  <script src="script.js"></script>
+  <div id="canvas-container"></div>
+
+  <script src="canvas.js"></script>
 </body>
 </html>
