--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Canvas Viewer</title>
+  <title>Linear Flow Canvas</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div id="canvas-container"></div>
-
-  <script src="canvas.js"></script>
+  <script src="canvas.js" type="module"></script>
 </body>
 </html>
